# ChatProgram

./: .gitignore  CMakeLists.txt  README.md
MiniChatClient/: CMakeLists.txt
MiniChatClient/Header/: Client.h  UserInput.h
MiniChatClient/Source/: Client.cpp  UserInput.cpp  main.cpp
MiniChatServer/: CMakeLists.txt
MiniChatServer/Header/: Server.h
MiniChatServer/Source/: Server.cpp  main.cpp
NetworkLibrary/: CMakeLists.txt
NetworkLibrary/Private/: ErrorManagement.h
NetworkLibrary/Public/Network/: Client.h  Network.h  Server.h
NetworkLibrary/Source/: Client.cpp  ErrorManagement.cpp  Network.cpp  Server.cpp
